--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Melanie Brandes is a Web Developer based in Australia. She builds responsive websites that work. ">
+        content="Melanie Constable is a Web Developer based in Australia. She builds responsive websites that work. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,13 +19,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <title>Melanie Brandes - About Me</title>
+    <title>Melanie Constable - About Me</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/index.html" title="Homepage">Melanie Brandes</a>
+            <a class="navbar-brand" href="/index.html" title="Homepage">Melanie Constable</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,23 +45,15 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="content">
-                    <h1 class="mb-4">Hi I am <br>Melanie Brandes</h1>
-                    <h2 class="mb-4">Software Developer based in Australia.</h2>
-                    <p class="text-muted">I am a German software developer based in Victoria, Australia. On my journey towards
-                        becoming a
-                        full-stack Web Developer, I
-                        have
-                        started learning coding though SheCodes Pro Workshops in 2020-2021, acquiring basic Web Development skills like responsive Web Development and the React framework.
-                        Having been excited by this new learning, I started a Diploma in Web Development and Design at Open
-                        Polytechnic July 2021 with the goal to change careers from teaching to Web Development. I finished this course successfully in June 2022. 
-                        <br><br>With my new skills in a range of web technologies, I started to work for Feuerwehr e-learning as a contractor in the role of a Junior Frontend Developer in Mai 2022. 
-                        Since November 2022, I am also working for GenU as a Junior Software Developer, where I am now learning more about backend technologies as well, coming closer to my goal of becoming a full-stack developer.</p>
-                        <br><p><i> It excites me that in life there is always another goal to chase.</i></p>
+                    <h1 class="mb-4">Hi I am <br>Melanie Constable</h1>
+                    <h2 class="mb-4">A front-end focused developer with a keen eye for detail and a love for creating clean, user-friendly interfaces.</h2>
+                    <p class="text-muted">Over the past 3 years, I’ve worked professionally as an Angular developer, building real-world web and mobile applications in collaborative, agile environments. Along the way, I’ve gained hands-on experience with React, .NET, and Ionic — from API integrations and state management to cross-platform UI development and CMS-based websites.  I'm currently expanding my knowledge through a Bachelor of Computer Science and always looking for new ways to sharpen my skills, solve meaningful problems, and craft elegant solutions.
+                    Let’s build something great together.</p>
                     <a href="/work.html" class="btn btn-branding main-button mt-5">My Projects</a>
                 </div>
             </div>
             <div class="col-md-6">
-                <img src="/images/mel.png.jpg" class="shadow img-fluid" alt="Photo: Melanie Brandes">
+                <img src="/images/mel.png.jpg" class="shadow img-fluid" alt="Photo: Melanie Constable">
 
             </div>
         </div>
@@ -82,23 +74,23 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <a href="mailto:mela.brandes@gmail.com" class="email-link" title="Email Melanie">
-                        mela.brandes@gmail.com
+                    <a href="mailto:melanie.constable92@gmail.com" class="email-link" title="Email Melanie">
+                        melanie.constable92@gmail.com
                     </a>
                 </div>
                 <div class="social-links d-flex justify-content-center">
-                    <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/" target="_blank" title="Melanie on LinkedIn">
+                    <a href="https://www.linkedin.com/in/melanie-constable-5a6ba318a/" target="_blank" title="Melanie on LinkedIn">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://github.com/MelaniaZ4" target="_blank" title="Melanie's Github Repositories">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.facebook.com/melanie.brandes.96/" target="_blank" title="Melanie on Facebook">
+                    <a href="https://www.facebook.com/melanie.constable/" target="_blank" title="Melanie on Facebook">
                         <i class="fab fa-facebook-square"></i>
                     </a>
                 </div>
-                <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This portfolio was coded by Melanie Brandes, and is
-                    <a href="https://github.com/MelaniaZ4/Portfolio-Project.git">open-sourced</a>.
+                <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This portfolio was coded by Melanie Constable, and is
+                    <a href="https://github.com/MelaniaZ4/Portfolio-Project.git">open-source</a>.
                 </p>
             </footer>
         </div>
