--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Melanie Brandes is a Web Developer based in Australia. She builds responsive websites that work. ">
+        content="Melanie Constable is a Web Developer based in Australia. She builds responsive websites that work. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,13 +19,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <title>Melanie Brandes - Contact Me</title>
+    <title>Melanie Constable - Contact Me</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/index.html" title="Homepage">Melanie Brandes</a>
+            <a class="navbar-brand" href="/index.html" title="Homepage">Melanie Constable</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,15 +46,15 @@
             <h1 class="mb-5">Let's get in touch!</h1>
             <h3>Email</h3>
                 <p>
-                    <a href="mailto:mela.brades@gmail.com" title="Email Melanie">mela.brades@gmail.com</a>
+                    <a href="mailto:melanie.constable92@gmail.com" title="Email Melanie">melanie.constable92@gmail.com</a>
                 </p>
                 <h3>Facebook</h3>
             <p>
-                <a href="https://www.facebook.com/melanie.brandes.96" target="_blank" title="Connect with Melanie on Facebook">@melanie.brandes.96</a>
+                <a href="https://www.facebook.com/melanie.constable.96" target="_blank" title="Connect with Melanie on Facebook">@melanie.constable</a>
             </p>
             <h3>LinkedIn</h3>
             <p>
-                <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/" target="_blank" title="Connect with Melanie on LinkedIn">@MelanieBrandes</a>
+                <a href="https://www.linkedin.com/in/melanie-constable-5a6ba318a/" target="_blank" title="Connect with Melanie on LinkedIn">@MelanieConstable</a>
             </p>
             
         </div>
@@ -76,23 +76,23 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <a href="mailto:mela.brandes@gmail.com" class="email-link" title="Email Melanie">
-                    mela.brandes@gmail.com
+                <a href="mailto:melanie.constable92@gmail.com" class="email-link" title="Email Melanie">
+                    melanie.constable92@gmail.com
                 </a>
             </div>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/" target="_blank" title="LinkedIn Profile">
+                <a href="https://www.linkedin.com/in/melanie-constable-5a6ba318a/" target="_blank" title="LinkedIn Profile">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://github.com/MelaniaZ4" target="_blank" title="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.facebook.com/melanie.brandes.96/" target="_blank" title="Facebook Profile">
+                <a href="https://www.facebook.com/melanie.constable/" target="_blank" title="Facebook Profile">
                     <i class="fab fa-facebook-square"></i>
                 </a>
             </div>
-            <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This project was coded by Melanie Brandes, and is
-                <a href="https://github.com/MelaniaZ4/Portfolio-Project.git">open-sourced</a>.
+            <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This project was coded by Melanie Constable, and is
+                <a href="https://github.com/MelaniaZ4/Portfolio-Project.git">open-source</a>.
             </p>
         </footer>
     </div>
