--- a/index.html
+++ b/index.html
@@ -1,156 +1,326 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Melanie Constable is a Web Developer based in Australia. She builds responsive websites that work using modern developer tools like React and Boostrap. " />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+			crossorigin="anonymous" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap"
+			rel="stylesheet" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Melanie Brandes is a Web Developer based in Australia. She builds responsive websites that work using modern developer tools like React and Boostrap. ">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="styles/styles.css" />
+		<script
+			src="https://kit.fontawesome.com/5bd0a6868f.js"
+			crossorigin="anonymous"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+			crossorigin="anonymous"></script>
+		<title>Software Developer - Melanie Constable</title>
+	</head>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="https://kit.fontawesome.com/5bd0a6868f.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
-    <title>Developer - Melanie Brandes</title>
-</head>
+	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<a
+					class="navbar-brand"
+					href="/index.html"
+					title="Homepage"
+					>Melanie Constable</a
+				>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-toggle="collapse"
+					data-target="#navbarNavAltMarkup"
+					aria-controls="navbarNavAltMarkup"
+					aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse"
+					id="navbarNavAltMarkup">
+					<div class="navbar-nav">
+						<a
+							class="nav-item nav-link active"
+							href="/index.html"
+							title="Homepage"
+							>Home <span class="sr-only">(current)</span></a
+						>
+						<a
+							class="nav-item nav-link"
+							href="/about.html"
+							title="About Melanie"
+							>About</a
+						>
+						<a
+							class="nav-item nav-link"
+							href="/work.html"
+							title="Melanie's work"
+							>Work</a
+						>
+						<a
+							class="nav-item nav-link"
+							href="/contact.html"
+							title="Contact Melanie"
+							>Contact</a
+						>
+					</div>
+				</div>
+			</nav>
+		</header>
 
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/index.html" title="Homepage">Melanie Brandes</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="/index.html" title="Homepage">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="/about.html" title="About Melanie">About</a>
-                    <a class="nav-item nav-link" href="/work.html" title="Melanie's work">Work</a>
-                    <a class="nav-item nav-link" href="/contact.html" title="Contact Melanie" >Contact</a>
-                </div>
-            </div>
-        </nav>
-    </header>
-    
-        <div class="hero">
-            <p>👋 Hello, I'm</p>
-            <h1>Melanie Brandes</h1>
-            <h2 class="mb-5">Developer based in Australia</h2>
-            <a href="/work.html" class="btn btn-branding main-button contact-button" title="Contact Melanie Brandes">Contact me</a>
-        </div>
-        <div class="container">
-        <p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
-        <div class="projects">
-            <div class="row mb-5">
-                <div class="col d-none d-lg-block mb-5">
-                    <img class="img-fluid" src="images/dictionary.png.PNG" alt="Dictionary">
-                </div>
-                <div class="col">
-                    <div class="project-description">
-                        <h2 class="mb-5">Dictionary App</h2>
-                        <p class="mb-5 text-muted">
-                            The Dictionary Lite App has been my lates project. This app combines my coding knowledge
-                            from three coding workshops using the React Framework, as well as JavaScript to make it
-                            functional. The free dictionary API and the Pexels Image API together create a great user
-                            experience when looking up definitions of words.
-                        </p>
-                        <a href="https://elastic-hoover-d0f470.netlify.app/" title="Dictionary App" target="_blanc"
-                            class="btn btn-branding-outline mb-5">Launch
-                            App</a>
-                    </div>
-                </div>
-                <div class="row mb-5">
-                    <div class="col">
-                        <div class="project-description">
-                            <h2 class="mb-5">Weather App</h2>
-                            <p class="mb-5 text-muted">
-                                This Weather App uses the OpenWeatherMap API and allows the user to access
-                                weather data from anywhere in the world through a search bar. This data includes the
-                                current weather as well as a seven day forecast based on real-life data. I used the
-                                front-end framework Bootstrap to create a professional user interface and user
-                                experience.
-                            </p>
-                            <a href="https://objective-colden-aae6f9.netlify.app/" title="Weather App" target="_blanc"
-                                class="btn btn-branding-outline">Launch
-                                App</a>
-                        </div>
-                    </div>
-                    <div class="col d-none d-lg-block">
-                        <img class="img-fluid" src="images/weather.png" alt="Weather App">
-                    </div>
-                </div>
-
-                <div class="row mb-5">
-                    <div class="col d-none d-lg-block">
-                        <img class="img-fluid" src="images/blueberry.png" alt="Vegan Blueberry Pancakes">
-                    </div>
-                    <div class="col">
-                        <div class="project-description">
-                            <h2 class="mb-5">Blueberry Pancakes</h2>
-                            <p class="mb-5 text-muted">
-                                The Blueberry Pancake Project was one of my earlier attempts to create a website that is
-                                purely based on HTML, CSS and very simple JavaScript. While it is basic, I like to
-                                incorporate this project as a reminder for myself of my own progess as a developer. I am
-                                also quite fond of the design and colour choice in this project.
-                            </p>
-                            <a href="https://festive-mestorf-a00114.netlify.app/" title="Blueberry Pancake Project" target="_blanc"
-                                class="btn btn-branding-outline">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <div class="contact-box d-flex justify-content-between d-none d-md-flex mb-5">
-                <div>
-                    <h4>
-                        Work Inquiry
-                    </h4>
-                    <p class="text-muted">
-                        Let's work together
-                    </p>
-                </div>  
-                <div>
-                    <a href="" class=" mt- 5 btn btn-branding main-button">Contact me</a>
-                </div>
-            </div>
-            <div class="d-flex justify-content-center">
-                <a href="mailto:mela.brandes@gmail.com"
-                class="email-link"
-                title="Email Melanie">
-                    mela.brandes@gmail.com
-                </a>
-            </div>
-            <div class="social-links d-flex justify-content-center">
-                <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/"
-                target="_blank"
-                title="Melanie on LinkedIn">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="https://github.com/MelaniaZ4"
-                target="_blank"
-                title="Melanie's Github Repositories">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://www.facebook.com/melanie.brandes.96/"
-                target="_blank"
-                title="Melanie on Facebook">
-                    <i class="fab fa-facebook-square"></i>
-                </a>
-            </div>
-            <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This project was coded by Melanie Brandes, and is 
-            <a href="https://github.com/MelaniaZ4/Portfolio-Project.git">open-sourced</a>. </p>
-        </footer>
-    </div>
-</body>
-
+		<div class="hero">
+			<p>👋 Hello, I'm</p>
+			<h1>Melanie Constable</h1>
+			<h2 class="mb-5">Software Developer based in Australia</h2>
+			<a
+				href="/work.html"
+				class="btn btn-branding main-button contact-button"
+				title="Contact Melanie Constable"
+				>Contact me</a
+			>
+		</div>
+		<div class="container">
+			<p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
+			<div class="projects">
+				<div class="row mb-5 d-flex align-items-center">
+					<div class="col d-none d-lg-block mb-5">
+						<img
+							class="img-fluid"
+							src="images/fwel-chat-ionic.jpg"
+							alt="Chat App" />
+					</div>
+					<div class="col">
+						<div class="project-description">
+							<h2 class="mb-5">Chat App</h2>
+							<p class="mb-5 text-muted">
+								This single-page Chat Application uses Angular combined with Ionic. The main
+								programming languages are therefore TypeScript, CSS and HTML.
+								This software was created for a private client and embedded into
+								an e-Learning plattform for users to communicate among each
+								other. Thanks to Ionic, the same codebase can be used in the
+								browser and in the mobile application.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row mb-5 d-flex align-items-center">
+					<div class="col">
+						<div class="project-description">
+							<h2 class="mb-5">React Weather App</h2>
+							<p class="mb-5 text-muted">
+								This Weather App uses the OpenWeatherMap API and allows the user
+								to access weather data from anywhere in the world through a
+								search bar. This data includes the current weather as well as a
+								five day forecast based on real-life data. I used Bootstrap to
+								create a professional user interface and enhanced the user experience with the use of icon animations.
+							</p>
+							<a
+								href="https://mels-weather-forecast.netlify.app/"
+								title="Weather App"
+								target="_blanc"
+								class="btn btn-branding-outline"
+								>Launch App</a
+							>
+						</div>
+					</div>
+					<div class="col d-none d-lg-block">
+						<img
+							class="img-fluid"
+							src="images/weather.png"
+							alt="Weather App" />
+					</div>
+				</div>
+				<div class="row mb-5 d-flex align-items-center">
+					<div class="col d-none d-lg-block mb-5">
+						<img
+							class="img-fluid"
+							src="images/dictionary.png"
+							alt="Dictionary" />
+					</div>
+					<div class="col">
+						<div class="project-description">
+							<h2 class="mb-5">React Dictionary App</h2>
+							<p class="mb-5 text-muted">
+								The Dictionary Lite App combines my coding knowledge from three
+								coding workshops using React and JavaScript. The free dictionary
+								API and Pexels Image API create a great user experience
+								when looking up words.
+							</p>
+							<a
+								href="https://dictionary-look-up.netlify.app/"
+								title="Dictionary App"
+								target="_blanc"
+								class="btn btn-branding-outline mb-5"
+								>Launch App</a
+							>
+						</div>
+					</div>
+				</div>
+				<div class="row mb-5 d-flex align-items-center">
+					<div class="col">
+						<div class="project-description">
+							<h2 class="mb-5">Landing Page</h2>
+							<p class="mb-5 text-muted">
+								This is a preview of a landing page built as a single-page application (SPA) with Angular and Ionic. I developed this project from scratch, including the design. Images, logos and information were blurred or blanked intentionally for privacy reasons.
+							</p>
+						</div>
+					</div>
+					<div class="col d-none d-lg-block">
+						<img
+							class="img-fluid"
+							src="images/landing-page.png"
+							alt="Landing Page" />
+					</div>
+				</div>
+                <div class="row mb-5 d-flex align-items-center">
+					<div class="col d-none d-lg-block">
+						<img
+							class="img-fluid"
+							src="images/haukai-restaurant.jpg"
+							alt="Haukai Restaurant Page" />
+					</div>
+					<div class="col">
+						<div class="project-description">
+							<h2 class="mb-5">Haukai Restaurant Page</h2>
+							<p class="mb-5 text-muted">
+								The Haukai Restaurant Page is a static website created with HTML, CSS and JavaScript. It utilises several Google services to deliver a seamless user experience including Google Maps API to display the business location, an enbedded Google Form to allow users to easily make bookings managed via Google Sheets, and an opening hours display which syncs with a public Google Calendar. 
+							</p>
+							<a
+								href="https://haukai-restaurant.netlify.app"
+								title="Haukai Restaurant Page"
+								target="_blanc"
+								class="btn btn-branding-outline"
+								>Launch Site</a
+							>
+						</div>
+					</div>
+				</div>
+                <div class="row mb-5 d-flex align-items-center">
+					<div class="col">
+						<div class="project-description">
+							<h2 class="mb-5">Recipe Blog</h2>
+							<p class="mb-5 text-muted">
+								I created the recipe blog TofuFitness with WIX as a personal project to experiment with a content management system (CMS) and with content creation of a topic I am passionate about. I used existing templates and adapted them to my own design ideas, including inluding my own logo, colour choices and layouts.
+							</p>
+							<a
+								href="https://melabrandes.wixsite.com/tofufitness/"
+								title="Recipe Blog"
+								target="_blanc"
+								class="btn btn-branding-outline"
+								>Launch Site</a
+							>
+						</div>
+					</div>
+					<div class="col d-none d-lg-block">
+						<img
+							class="img-fluid"
+							src="images/recipe-blog.jpg"
+							alt="Recipe Blog" />
+					</div>
+				</div>
+				<div class="row mb-5 d-flex align-items-center">
+					<div class="col d-none d-lg-block">
+						<img
+							class="img-fluid"
+							src="images/blueberry.png"
+							alt="Vegan Blueberry Pancakes" />
+					</div>
+					<div class="col">
+						<div class="project-description">
+							<h2 class="mb-5">Blueberry Pancakes</h2>
+							<p class="mb-5 text-muted">
+								The Blueberry Pancake Project was one of my earliest website
+								builds purely based on HTML, CSS and very simple JavaScript.
+								While it is basic, I like to incorporate this project as a
+								reminder for myself of my own progess as a developer.
+							</p>
+							<a
+								href="https://blueberry-pancake.netlify.app/"
+								title="Blueberry Pancake Project"
+								target="_blanc"
+								class="btn btn-branding-outline"
+								>Launch Site</a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+			<footer>
+				<div
+					class="contact-box d-flex justify-content-between d-none d-md-flex mb-5">
+					<div>
+						<h4>Work Inquiry</h4>
+						<p class="text-muted">Let's work together</p>
+					</div>
+					<div>
+						<a
+							href=""
+							class="mt-5 btn btn-branding main-button"
+							>Contact me</a
+						>
+					</div>
+				</div>
+				<div class="d-flex justify-content-center">
+					<a
+						href="mailto:melanie.constable92@gmail.com"
+						class="email-link"
+						title="Email Melanie">
+						melanie.constable92@gmail.com
+					</a>
+				</div>
+				<div class="social-links d-flex justify-content-center">
+					<a
+						href="https://www.linkedin.com/in/melanie-constable-5a6ba318a/"
+						target="_blank"
+						title="Melanie on LinkedIn">
+						<i class="fab fa-linkedin-in"></i>
+					</a>
+					<a
+						href="https://github.com/MelaniaZ4"
+						target="_blank"
+						title="Melanie's Github Repositories">
+						<i class="fab fa-github"></i>
+					</a>
+					<a
+						href="https://www.facebook.com/melanie.constable/"
+						target="_blank"
+						title="Melanie on Facebook">
+						<i class="fab fa-facebook-square"></i>
+					</a>
+				</div>
+				<p class="text-center mt-5 mb-5 text-muted">
+					👩‍💻 This project was coded by Melanie Constable, and is
+					<a href="https://github.com/MelaniaZ4/Portfolio-Project.git"
+						>open-source</a
+					>.
+				</p>
+			</footer>
+		</div>
+	</body>
 </html>
